--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
       <div class="card">
         <div class="card__descrição">
           <div class="descrição">
-            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+            <h3 class="descrição__titulo">Explore também:...</h3>
             <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
             <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do Google.
+              Aprenda a criar uma aplicação integrada com a plataforma do Google.
             </p>
           </div>
           <img src="Angular.svg" class="descrição__imagem" />
@@ -182,14 +182,13 @@
 
           <div class="descrição">
             <img src="Estrelinhas.svg" alt="Avaliação 5 estrelas">
-            <h3 class="descrição__titulo">Autora do Mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
+            <h3 class="descrição__titulo">Estudante do Mês</h3>
+            <h2 class="descrição__titulo-livro">Sophia Fernandes</h2>
+          <p class="descrição__texto">Estudante do 2° do ensino médio
             </p>
           </div>
       
-          <img src="Escritora.svg" class="descrição__imagem">
+          <img src="sophia.jpeg" width="200px" class="descrição__imagem">
         </div>
 
  
